--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,6 +54,9 @@
         <activity android:name=".ReceiveActivity"
                   android:icon="@drawable/logo3"
                   android:label="Account Activity"/>
+        <activity android:name=".VerifyToken"
+                  android:icon="@drawable/logo3"
+                    android:label="Verify"/>
 
         <receiver
                 android:name="gh.com.zenith.ZPROMPT.GcmBroadcastReceiver"
